<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.FreightFrenzyScoring.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/freight_blue"
            app:popupTheme="@style/Theme.FreightFrenzyScoring.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/score_text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/auton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/autonTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/auton_title_text"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/autonScoreText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/autonPreloadDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/auton_preloaded_box_title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/preloadedDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/autonPreloadTeam"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/auton_preloaded_team_vision_button_text" />

                    <Button
                        android:id="@+id/autonPreloadDuck"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/auton_preloaded_duck_vision_button_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/autonDuckDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/auton_duck_delivery_title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/autonDuckDeliveryButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/auton_duck_delivery_button_text" />

                <TextView
                    android:id="@+id/autonFreightScoring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/auton_freight_scoring_title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/freightScoring"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/autonFreightScoringStorage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/auton_freight_scoring_storage_button_text" />

                    <Button
                        android:id="@+id/autonFreightScoringHub"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/auton_freight_scoring_hub_button_text" />

                </LinearLayout>

                <TextView
                    android:id="@+id/autonParking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/auton_parking_title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/parking"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/storage"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height">

                        <Button
                            android:id="@+id/autonParkingStoragePartial"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/auton_parking_storage_partial_button_text" />

                        <Button
                            android:id="@+id/autonParkingStorageFull"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/auton_parking_storage_full_button_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/warehouse"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height">

                        <Button
                            android:id="@+id/autonParkingWarehousePartial"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/auton_parking_warehouse_partial_button_text" />

                        <Button
                            android:id="@+id/autonParkingWarehouseFull"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/auton_parking_warehouse_full_button_text" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/teleop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/teleopTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teleop_title_text"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teleopScoreText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teleopAllianceHubTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teleop_alliance_hub_title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/allianceHub"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/teleopAllianceOne"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/teleop_alliance_level_one_button_text" />

                    <Button
                        android:id="@+id/teleopAllianceTwo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/teleop_alliance_level_two_button_text" />

                    <Button
                        android:id="@+id/teleopAllianceThree"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/teleop_alliance_level_three_button_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/teleopOtherTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teleop_other_title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/other"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/teleopOtherShared"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/teleop_other_shared_button_text" />

                    <Button
                        android:id="@+id/teleopOtherStorage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/teleop_other_storage_button_text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/endgame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/endgameTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/endgame_title_text"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endgameScoreText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endgameBalanceTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/endgame_balance_title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/balance"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/endgameBalanceAlliance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/endgame_balance_alliance_button_text" />

                    <Button
                        android:id="@+id/endgameBalanceShared"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/endgame_balance_shared_button_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/endgameDuckTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/endgame_duck_delivery_title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/endgameDuck"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:text="@string/endgame_duck_delivery_button_text" />

                <TextView
                    android:id="@+id/endgameCapTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/endgame_capping_title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/endgameCap"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:text="@string/endgame_capping_button_text" />

                <TextView
                    android:id="@+id/endgameParkingTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/endgame_parking_title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/park"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/endgameParkPartial"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:layout_weight="1"
                        android:text="@string/endgame_parking_warehouse_partial_button_text" />

                    <Button
                        android:id="@+id/endgameParkFull"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:layout_weight="1"
                        android:text="@string/endgame_parking_warehouse_full_button_text" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>